--- a/Semantic_Mashup.ipynb
+++ b/Semantic_Mashup.ipynb
@@ -26,7 +26,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Skrypt nie działa dla samochodów którch pełna nazwa marki nie jest używana w nazwie samochodu. np:  ̶F̶a̶b̶r̶y̶k̶a̶ ̶Sa̶m̶o̶c̶h̶o̶d̶ó̶w̶ ̶Os̶o̶b̶o̶w̶y̶c̶h̶   FSO Polonez,  ̶F̶o̶r̶d̶ ̶M̶o̶t̶o̶r̶ ̶C̶o̶m̶p̶a̶n̶y̶ Ford Focus Mk3. Sprawdzone wejścia \"Nissan Skyline\" \"Opel Astra G\" \"Audi A6 C5\" \"Citroën C5\"\n",
+        "The script does not work for cars where the full brand name is not used in the car's name. For example:   ̶F̶a̶b̶r̶y̶k̶a̶ ̶Sa̶m̶o̶c̶h̶o̶d̶ó̶w̶ ̶Os̶o̶b̶o̶w̶y̶c̶h̶   FSO Polonez,  ̶F̶o̶r̶d̶ ̶M̶o̶t̶o̶r̶ ̶C̶o̶m̶p̶a̶n̶y̶ Ford Focus Mk3. Working inputs \"Nissan Skyline\" \"Opel Astra G\" \"Audi A6 C5\" \"Citroën C5\"\n",
         "\n",
         "> Add blockquote\n",
         "\n",
